[package]
name = "rz80"
version = "0.1.1"
license = "MIT"
authors = ["Andre Weissflog <floooh@gmail.com>"]
description = "Z80 chip family emulation"
keywords = ["Z80", "emulation", "emulator", "8-bit"]
repository = "https://github.com/floooh/rz80"
homepage = "https://github.com/floooh/rz80"
documentation = "https://floooh.github.com/rz80/rz80/index.html"
exclude = [
    ".vscode/*",
]

[dev-dependencies]
time="0.1"
minifb="0.8.3"
rand="0.3"

[profile.release]
lto = true
